Fix Jenkins build.